--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,6 @@ requires-python = ">=3.12"
 dependencies = [
     "numpy>=2.2.3",
     "tinygrad>=0.10.2",
+    "torch>=2.6.0",
+    "transformers>=4.50.3",
 ]
